<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/title"
            android:id="@+id/rules_title"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rules_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/rules_title">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gameDescription_title"
                android:textSize="@dimen/rule_title"
                android:id="@+id/subtitle1"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_description"
                android:textSize="@dimen/paragraph"
                app:layout_constraintTop_toBottomOf="@id/subtitle1"
                android:id="@+id/paragraph1"
            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_title"
                android:textSize="@dimen/rule_title"
                app:layout_constraintTop_toBottomOf="@id/paragraph1"
                android:id="@+id/subtitle2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scores_description"
                android:textSize="@dimen/paragraph"
                app:layout_constraintTop_toBottomOf="@id/subtitle2"
                android:id="@+id/paragraph2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/rule_title"
                android:text="@string/numCards_title"
                android:id="@+id/subtitle3"
                app:layout_constraintTop_toBottomOf="@id/paragraph2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_cards"
                android:textSize="@dimen/paragraph"
                app:layout_constraintTop_toBottomOf="@id/subtitle3"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_selectCards"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Select the number of cards"
            android:textColor="@color/btn_text"
            app:backgroundTint="@color/btn_background"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rules_container"
            app:strokeColor="@color/red_bar"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>