<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".WaitingRoomFragment">

    <TextView
        android:id="@+id/waiting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        android:textAlignment="center"
        android:textSize="@dimen/rule_title"
        android:text="@string/waiting_room" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/expiry"
        android:textSize="@dimen/rule_title"
        android:textAlignment="center"
        android:text="@string/before_expire"
        app:layout_constraintTop_toBottomOf="@id/waiting_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/expiry"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_toStart"
            android:textAlignment="center"
            android:textSize="@dimen/rule_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textSize="@dimen/title"
            android:id="@+id/seconds_left"
            android:text="60"
            />
    </LinearLayout>
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Joined Users"
            android:textStyle="bold"
            android:textSize="@dimen/rule_title"
            android:background="@drawable/card_cell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv1"
            android:padding="10dp"
            android:textSize="@dimen/rule_title"
            android:background="@drawable/card_cell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv2"
            android:padding="10dp"
            android:textSize="@dimen/rule_title"
            android:background="@drawable/card_cell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv3"
            android:padding="10dp"
            android:textSize="@dimen/rule_title"
            android:background="@drawable/card_cell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv4"
            android:padding="10dp"
            android:textSize="@dimen/rule_title"
            android:background="@drawable/card_cell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv5"
            android:padding="10dp"
            android:textSize="@dimen/rule_title"
            android:background="@drawable/card_cell" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv6"
            android:padding="10dp"
            android:textSize="@dimen/rule_title"
            android:background="@drawable/card_cell" />
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>